--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.15.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
